--- a/src/index.css
+++ b/src/index.css
@@ -542,7 +542,7 @@ ul.bars {
 .filter-box {
   display: flex;
   flex-direction: column;
-  padding: 0 46px 15px 30px;
+  padding: 0 46px 0 30px;
 }
 /* End Main/Landing Styles */
 
@@ -623,7 +623,7 @@ ul.bars {
   border: 1px solid white;
 }
 
-.account-panel > h4 {
+.account-panel > h3 {
   margin-bottom: 3px;
   -webkit-text-stroke-width: 0.0001px;
   -webkit-text-stroke-color: red;
@@ -710,6 +710,16 @@ form {
 #new-project-form {
   margin-bottom: 45px;
   padding-bottom: 30px;
+}
+
+#login-form > div > small {
+  font-style: italic;
+  font-size: 10px;
+  color: grey;
+}
+
+#login-form > .form-tip{
+  margin-top: 12px;
 }
 
 .text {
