--- a/src/index.css
+++ b/src/index.css
@@ -95,7 +95,11 @@ ul.bars {
   width: 190px;
   position: absolute;
   left: 0;
-  background: red;
+  background: linear-gradient(
+    to bottom right,
+    rgba(253, 5, 5, 0.9),
+    rgba(0, 0, 0, 0.9)
+  );
   padding: 25px;
   /* display: block; */
   z-index: 1;
@@ -358,24 +362,40 @@ ul.bars {
   grid-area: right;
 }
 
-.stats-grid {
-  text-align: center;
+.footer-grid {
+  text-align: left;
   display: grid;
-  /* grid-template-columns: 33% 33% 33%; */
-  grid-template-areas: "menu main right";
+  grid-template-columns: 100%;
+  color: white;
 }
 
-.stats-grid-item {
+.footer-grid-item {
   justify-content: start;
   color: white;
 }
 
-.stats-grid-item-last {
+.f-grid-item-1 {
+  display: none;
+}
+.f-grid-item-3 {
+  display: none;
+  padding: 0 auto;
+}
+
+.f-grid-item-2 {
+  padding-bottom: 10px;
+  padding-top: 5px;
+}
+.f-grid-item-4 {
+  padding: 0 auto;
+}
+
+.footer-grid-item-last {
   text-align: right;
   padding-right: 30px;
 }
 
-.stats-grid-item > h1 {
+.footer-grid-item > h1 {
   margin-bottom: 0;
   margin-top: 0;
 }
@@ -789,7 +809,7 @@ form > textarea {
   margin-left: 0;
   border: 1px solid white;
   box-shadow: 1px 1px 1px #999;
-  border-radius:7px;
+  border-radius: 7px;
 }
 
 #bidder-form > div > h3 {
@@ -1038,6 +1058,24 @@ form > textarea {
 }
 
 @media (min-width: 678px) {
+  .footer-grid {
+    grid-template-columns: 50% 50%;
+  }
+
+  .f-grid-item-1,
+  .f-grid-item-3 {
+    display: inline-block;
+  }
+
+  .f-grid-item-2,
+  .f-grid-item-4 {
+    display: none;
+  }
+
+  .f-grid-item-3 {
+    text-align: right;
+  }
+
   .text {
     width: 83%;
   }
