--- a/src/index.css
+++ b/src/index.css
@@ -95,14 +95,26 @@ ul.bars {
   bottom: 0;
   width: 190px;
   position: absolute;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right bottom,
+    from(rgba(253, 5, 5, 0.9)),
+    to(rgba(0, 0, 0, 0.9))
+  );
+  background: -webkit-linear-gradient(
+    top left,
+    rgba(253, 5, 5, 0.9),
+    rgba(0, 0, 0, 0.9)
+  );
   background: linear-gradient(
     to bottom right,
     rgba(253, 5, 5, 0.9),
     rgba(0, 0, 0, 0.9)
   );
-  padding: 25px;
+  padding: 35px 25px;
   z-index: 1;
-  border-right: 1px solid white;
+  border-right: 1px solid #fff;
   box-shadow: 1.5px 1.5px 1.5px #999;
 }
 
@@ -137,11 +149,15 @@ ul.bars {
 }
 
 #mbl-nav > #logoundefined > h1 > span > .thumbsUp {
-  margin-right: 0;
-  font-size: 16px;
+  margin-right: 1px;
+  font-size: 15px;
   padding: 3px;
-  border: 1px solid white;
+  border: 1px solid #fff;
   border-radius: 5px;
+  margin-top: 4px;
+  position: absolute;
+  left: 47px;
+  top: 29px;
 }
 
 .ease-close {
@@ -505,7 +521,7 @@ ul.bars {
   padding-left: 5px;
 }
 
-.single-project-content-separator {
+.project .single-project-content-separator {
   border-bottom: 0.5px solid darkred;
   border-top: 0.5px solid darkred;
 }
@@ -613,6 +629,10 @@ ul.bars {
   display: grid;
   grid-template-columns: 100%;
   padding: 10px 30px 15px;
+}
+
+.project-page-grid > .main-single-project-square {
+  padding-top: 30px;
 }
 
 #project-page-bidders {
@@ -834,12 +854,13 @@ form > textarea {
 }
 
 #bidder-form > button {
-  width: 15%;
+  width: 30%;
   display: block;
   margin-left: 0;
   border: 1px solid white;
   box-shadow: 1px 1px 1px #999;
-  border-radius: 7px;
+  border-radius: 5px;
+  max-width: 100px;
 }
 
 #bidder-form > div > h3 {
@@ -976,7 +997,7 @@ form > textarea {
 }
 
 .comments-header > .comments-header-grid > h2 {
-  padding: 15px 0;
+  padding: 10px 0;
 }
 
 .comments-header-grid {
@@ -1088,6 +1109,9 @@ form > textarea {
 }
 
 @media (min-width: 678px) {
+  #bidder-form > button {
+    width: 20%;
+  }
   .main-single-project-square > header > h2 > {
     margin-top: 15px;
   }
